<resources>
    <string name="app_name" translatable="false">Stock Hawk</string>

    <string name="pref_invalid_stock_symbol" translatable="false">invalid_stock_symbol</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>

    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="false">FB</string>
    <string name="input_prefill"/>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
    <string name="no_network">No Data Available\nCheck Network Connection</string>
    <string name="widget_empty_string">No Data</string>
    <string name="refresh_message">Refresh Complete!</string>
    <string name="no_add_symbol">Could not find symbol</string>
    <string name="try_again">Please try again</string>
    <string name="duplicate_stock">This stock is already saved!</string>

    <string name="description_refresh">Click to refresh the widget data</string>
    <string name="description_toggle_percent">Click to toggle percent values</string>
    <string name="description_open_application">Click to open application</string>
    <string name="description_fab">Click to add a new Stock Symbol.</string>
    <string name="description_history_chart">History chart showing stock prices for the past 30 days</string>

    <string name="label_stock_name">Stock Name</string>
    <string name="label_stock_symbol">Stock Symbol</string>
    <string name="label_currency">Currency</string>
    <string name="label_previous_close">Last Close</string>
</resources>
