<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="#aa000000"
    android:id="@+id/widget_window"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp" >
        <!-- Title bar for widget -->
        <RelativeLayout android:id="@+id/widget_titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/material_blue_500_alpha_50" >
            <TextView
                android:id="@+id/widget_title"
                android:contentDescription="@string/description_open_application"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/app_name"
                android:textColor="#ffffff"
                android:textSize="32sp"
                android:padding="13dp" />

            <TextView
                android:id="@+id/widget_refresh"
                android:contentDescription="@string/description_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:drawableEnd="@drawable/ic_autorenew_white_36dp"
                android:drawableRight="@drawable/ic_autorenew_white_36dp"
                android:textColor="#ffffff"
                android:textSize="32sp"
                android:padding="13dp" />

            <TextView
                android:id="@+id/widget_format"
                android:contentDescription="@string/description_toggle_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/widget_refresh"
                android:layout_toLeftOf="@id/widget_refresh"
                android:drawableEnd="@drawable/ic_attach_money_white_36dp"
                android:drawableRight="@drawable/ic_attach_money_white_36dp"
                android:textColor="#ffffff"
                android:textSize="32sp"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp" />

        </RelativeLayout>

        <!-- ListView to be shown on widget -->
        <ListView
            android:id="@+id/widget_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_below="@id/widget_titlebar" />

        <!-- Empty view is show if list items are empty -->
        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/widget_empty_string"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_below="@id/widget_titlebar" />
    </RelativeLayout>
</FrameLayout>