<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale"
    android:id="@+id/fragment_history_container" >

    <LinearLayout
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.db.chart.view.LineChartView
            xmlns:chart="http://schemas.android.com/apk/res-auto"
            android:id="@+id/linechart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/description_history_chart" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            card_view:contentPadding="16dp"
            card_view:cardElevation="6dp"
            card_view:cardCornerRadius="10dp"
            card_view:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="18dp"
                    android:paddingLeft="18dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:text="@string/label_stock_name"
                        android:textDirection="locale"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:text="@string/label_stock_symbol"
                        android:textDirection="locale"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:text="@string/label_currency"
                        android:textDirection="locale"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:text="@string/label_previous_close"
                        android:textDirection="locale"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="36dp"
                    android:paddingLeft="36dp">
                    <TextView
                        android:id="@+id/stock_name"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:text="Yahoo! Inc."
                        android:textDirection="locale"/>
                    <TextView
                        android:id="@+id/stock_symbol"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:text="YHOO"
                        android:textDirection="locale"/>
                    <TextView
                        android:id="@+id/currency"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:text="USD"
                        android:textDirection="locale"/>
                    <TextView
                        android:id="@+id/previous_close"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:text="45.58"
                        android:textDirection="locale"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</FrameLayout>